RESOLVED FIXED56386
WebConsoleMessage doesn't respect the log level
https://bugs.webkit.org/show_bug.cgi?id=56386
Summary WebConsoleMessage doesn't respect the log level
Brett Wilson (Google)
Reported 2011-03-15 10:11:40 PDT
Due to a typo in the constructor, the level is ignored.
Attachments
Patch (1.11 KB, patch)
2011-03-15 10:17 PDT, Brett Wilson (Google)
abarth: review+
Brett Wilson (Google)
Comment 1 2011-03-15 10:17:12 PDT
Brett Wilson (Google)
Comment 2 2011-03-15 12:28:25 PDT
Fixed in r81164.
Note You need to log in before you can comment on or make changes to this bug.