2011-03-15  Brett Wilson  <brettw@chromium.org>

Reviewed by Adam Barth

        Make WebConsoleMessage properly respect the log level.
        https://bugs.webkit.org/show_bug.cgi?id=56386

        * public/WebConsoleMessage.h:
        (WebKit::WebConsoleMessage::WebConsoleMessage):

Canonical link: https://commits.webkit.org/71042@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81164 268f45cc-cd09-0410-ab3c-d52691b4dbfc